[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
serde_scan = "0.4.1"
serde = { version = "1.0.130", features = ["derive"] }
regex = "1.5.4"
cgmath = "0.18.0"
num = "0.4.0"
enum-primitive-derive = "0.2.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
petgraph = "0.6.0"
clap = "3.0.0-beta.5"
derive_more = "0.99.17"
rayon = "1.5.1"
nom = "7.1.0"
